--- a/game.html
+++ b/game.html
@@ -33,25 +33,25 @@
                     </h1>
                 </div>
             </div>
-            <h1 id="question">What is the answer to this question</h1>
+            <h1 id="question">What is Your Favorite Language?</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1">Choice</p>
+                <p class="choice-text" data-number="1">JavaScript</p>
 
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">B</p>
-                <p class="choice-text" data-number="2">Choice</p>
+                <p class="choice-text" data-number="2">CSS</p>
 
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">C</p>
-                <p class="choice-text" data-number="3">Choice</p>
+                <p class="choice-text" data-number="3">HTML</p>
 
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">Choice</p>
+                <p class="choice-text" data-number="4">All of the Above</p>
             </div>
             <script src="game.js"></script>
 
