--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./assets/game.css">
 </head>
 
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Let's Play!</h1>
-            <a href="/game.html" class="btn">Play</a>
+            <a href="game.html" class="btn">Play</a>
             <a href="/highscores.html" id="highscore-btn" class="btn">High Scores
 
             </a>
