--- a/game.html
+++ b/game.html
@@ -25,6 +25,10 @@
 
                 </div>
                 <div class="hud-item">
+                    <p class="timer"></p>
+                </div>
+
+                <div class="hud-item">
                     <p class="hud-prefix">
                         Score
                     </p>
@@ -34,27 +38,28 @@
                 </div>
             </div>
             <h1 id="question">What is Your Favorite Language?</h1>
-            <div class="choice-container">
+            <div class="q1 choice-container" onclick="questionOne(1)">
                 <p class="choice-prefix">A</p>
                 <p class="choice-text" data-number="1">JavaScript</p>
 
             </div>
-            <div class="choice-container">
+            <div class="q1 choice-container" onclick="questionOne(2)">
                 <p class="choice-prefix">B</p>
                 <p class="choice-text" data-number="2">CSS</p>
 
             </div>
-            <div class="choice-container">
+            <div class="q1 choice-container" onclick="questionOne(3)">
                 <p class="choice-prefix">C</p>
                 <p class="choice-text" data-number="3">HTML</p>
 
             </div>
-            <div class="choice-container">
+            <div class="q1 choice-container" onclick="questionOne(4)">
                 <p class="choice-prefix">D</p>
                 <p class="choice-text" data-number="4">All of the Above</p>
             </div>
             <script src="game.js"></script>
-
+        </div>
+    </div>
 
 </body>
 
